[package]
name = "ipfs-api"
version = "0.0.1"
license = "0BSD"
authors = ["leavehouse <heavelouse@gmail.com>"]

[lib]

[[bin]]
name = "test-stuff"
path = "src/test_stuff.rs"

[[bin]]
name = "wireshark-api-call"
path = "wireshark_capture/api_call.rs"

[dependencies]
futures = "0.1"
hyper = "0.11"
multiaddr = "0.2"
multipart-legacy-client = { git = "https://github.com/leavehouse/multipart-legacy-client.git" }
#multipart-legacy-client = { path = "../multipart-legacy-client/" }
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tokio-core = "0.1"
